tests/ui/structs/incomplete-fn-in-struct-definition.rs
fn main() {}

struct S {
    fn: u8 //~ ERROR expected identifier, found keyword `fn`
}
